fix: visibility issues with spinner and button

--- a/stories/Spinner.scss
+++ b/stories/Spinner.scss
@@ -2,7 +2,7 @@
 
 .spinner {
   @include absolute();
-  @include loading();
+  @include loading(true);
 
   display: flex;
   align-items: center;
